RESOLVED FIXED172319
Selection around attachment elements should not persist when beginning a drag
https://bugs.webkit.org/show_bug.cgi?id=172319
Summary Selection around attachment elements should not persist when beginning a drag
Wenson Hsieh
Reported 2017-05-18 15:18:32 PDT
Selection around attachment elements should not persist when beginning a drag
Attachments
Patch (3.68 KB, patch)
2017-05-18 15:24 PDT, Wenson Hsieh
thorton: review+
Patch for landing (3.72 KB, patch)
2017-05-18 15:40 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2017-05-18 15:24:35 PDT
Wenson Hsieh
Comment 2 2017-05-18 15:24:57 PDT
Wenson Hsieh
Comment 3 2017-05-18 15:40:43 PDT
Created attachment 310562 [details] Patch for landing
WebKit Commit Bot
Comment 4 2017-05-18 16:20:37 PDT
Comment on attachment 310562 [details] Patch for landing Clearing flags on attachment: 310562 Committed r217074: <http://trac.webkit.org/changeset/217074>
Note You need to log in before you can comment on or make changes to this bug.