Selection around attachment elements should not persist when beginning a drag https://bugs.webkit.org/show_bug.cgi?id=172319 <rdar://problem/32283008>

Reviewed by Tim Horton.

Source/WebCore:

When beginning to drag an attachment element, save and restore the visible selection when calling out to the
injected bundle for additional data, and when creating the drag image.

Augmented an existing API test: DataInteractionTests.AttachmentElementItemProviders.

* page/DragController.cpp:
(WebCore::DragController::startDrag):

Tools:

Tests that temporary selection around an attachment does not persist longer than it needs to.

* TestWebKitAPI/Tests/ios/DataInteractionTests.mm:
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/189216@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217074 268f45cc-cd09-0410-ab3c-d52691b4dbfc